--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,10 +5,13 @@ server.port=8082
 topics.my_topic = my_topic
 
 #producer config
-kafka.bootstrap-servers=localhost:9092
+kafka.bootstrap-servers=kafka:9092
 
 #kafka consumer properties
-spring.kafka.consumer.bootstrap-servers=http://localhost:9092
+spring.kafka.consumer.bootstrap-servers=http://kafka:9092
 spring.kafka.consumer.group-id=group-id
 spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.max-poll-records=500
+spring.kafka.consumer.fetch-min-size= 209715200
+
 
